--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "test-project",
+  "homepage": "https://alwenpy.github.io/portfolio/",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "gh-pages": "^5.0.0",
     "svelte": "^3.54.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
